--- a/docker.env.example
+++ b/docker.env.example
@@ -32,8 +32,9 @@ POETRY_VERSION=1.8.3
 # PyTorch version (should match your requirements)
 TORCH_VERSION=2.4.0
 
-# Kaolin version
+# Kaolin version and source URL
 KAOLIN_VERSION=0.17.0
+KAOLIN_INDEX_URL=https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu121.html
 
 # -----------------------------------------------------------------------------
 # Application Configuration
@@ -59,6 +60,23 @@ CUDA_VISIBLE_DEVICES=all
 
 # Number of GPUs to allocate (all, or a specific number)
 GPU_COUNT=all
+
+# -----------------------------------------------------------------------------
+# Cache Directory Configuration
+# -----------------------------------------------------------------------------
+# Cache directories inside the container
+CACHE_DIR=/home/appuser/.cache
+HF_CACHE_DIR=/home/appuser/.cache/huggingface
+REMBG_CACHE_DIR=/home/appuser/.u2net
+TRELLIS_OUTPUT_DIR=/tmp/Trellis-demo
+
+# Docker volume names for persistent storage
+CACHE_VOLUME=trellis-cache
+HF_CACHE_VOLUME=huggingface-cache
+REMBG_CACHE_VOLUME=rembg-cache
+
+# Host directory for outputs (relative or absolute path)
+OUTPUTS_HOST_DIR=./outputs
 
 # -----------------------------------------------------------------------------
 # Docker Image Configuration
@@ -89,4 +107,17 @@ IMAGE_TAG=latest
 
 # Example 5: Use Python 3.11 (ensure compatibility with dependencies first)
 # PYTHON_VERSION=3.11
+
+# Example 6: Use custom cache directories
+# CACHE_DIR=/data/.cache
+# HF_CACHE_DIR=/data/.cache/huggingface
+# REMBG_CACHE_DIR=/data/.u2net
+
+# Example 7: Use custom volume names (useful for multiple instances)
+# CACHE_VOLUME=trellis-dev-cache
+# HF_CACHE_VOLUME=huggingface-dev-cache
+# REMBG_CACHE_VOLUME=rembg-dev-cache
+
+# Example 8: Store outputs in a different directory
+# OUTPUTS_HOST_DIR=/path/to/my/outputs
 
