--- a/docker.env.example
+++ b/docker.env.example
@@ -36,6 +36,11 @@ TORCH_VERSION=2.4.0
 KAOLIN_VERSION=0.17.0
 KAOLIN_INDEX_URL=https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu121.html
 
+# CUDA architectures to compile for (space-separated compute capabilities)
+# 7.0,7.5 = Volta/Turing (V100, RTX 2080), 8.0,8.6 = Ampere (A100, RTX 3090)
+# 8.9 = Ada Lovelace (RTX 4090), 9.0 = Hopper (H100)
+TORCH_CUDA_ARCH_LIST=7.0 7.5 8.0 8.6 8.9 9.0
+
 # -----------------------------------------------------------------------------
 # Application Configuration
 # -----------------------------------------------------------------------------
@@ -108,16 +113,21 @@ IMAGE_TAG=latest
 # Example 5: Use Python 3.11 (ensure compatibility with dependencies first)
 # PYTHON_VERSION=3.11
 
-# Example 6: Use custom cache directories
+# Example 6: Compile only for your specific GPU (faster build)
+# For RTX 3090 only: TORCH_CUDA_ARCH_LIST=8.6
+# For RTX 4090 only: TORCH_CUDA_ARCH_LIST=8.9
+# For multiple: TORCH_CUDA_ARCH_LIST=8.6 8.9
+
+# Example 7: Use custom cache directories
 # CACHE_DIR=/data/.cache
 # HF_CACHE_DIR=/data/.cache/huggingface
 # REMBG_CACHE_DIR=/data/.u2net
 
-# Example 7: Use custom volume names (useful for multiple instances)
+# Example 8: Use custom volume names (useful for multiple instances)
 # CACHE_VOLUME=trellis-dev-cache
 # HF_CACHE_VOLUME=huggingface-dev-cache
 # REMBG_CACHE_VOLUME=rembg-dev-cache
 
-# Example 8: Store outputs in a different directory
+# Example 9: Store outputs in a different directory
 # OUTPUTS_HOST_DIR=/path/to/my/outputs
 
