--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
         POETRY_VERSION: ${POETRY_VERSION:-1.8.3}
         KAOLIN_VERSION: ${KAOLIN_VERSION:-0.17.0}
         KAOLIN_INDEX_URL: ${KAOLIN_INDEX_URL:-https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu121.html}
+        TORCH_CUDA_ARCH_LIST: ${TORCH_CUDA_ARCH_LIST:-7.0 7.5 8.0 8.6 8.9 9.0}
         APP_USER: ${APP_USER:-appuser}
         APP_UID: ${APP_UID:-1000}
         APP_PORT: ${APP_PORT:-8501}
