--- a/docker.env.example
+++ b/docker.env.example
@@ -12,10 +12,11 @@
 # CUDA and System Configuration
 # -----------------------------------------------------------------------------
 # CUDA version (must match available nvidia/cuda images)
-CUDA_VERSION=12.1.0
+# See: https://hub.docker.com/r/nvidia/cuda/tags
+CUDA_VERSION=12.4.1
 
-# cuDNN version
-CUDNN_VERSION=8
+# cuDNN version (9 for CUDA 12.4+, 8 for older CUDA)
+CUDNN_VERSION=9
 
 # Ubuntu version
 UBUNTU_VERSION=22.04
@@ -58,6 +59,15 @@ APP_PORT=8501
 HOST_PORT=8501
 
 # -----------------------------------------------------------------------------
+# Streamlit Configuration
+# -----------------------------------------------------------------------------
+# Streamlit server address (0.0.0.0 to accept all connections)
+STREAMLIT_SERVER_ADDRESS=0.0.0.0
+
+# Run in headless mode (no browser auto-open)
+STREAMLIT_SERVER_HEADLESS=true
+
+# -----------------------------------------------------------------------------
 # GPU Configuration
 # -----------------------------------------------------------------------------
 # Which GPUs to use (all, or comma-separated device IDs like "0,1")
@@ -96,38 +106,43 @@ IMAGE_TAG=latest
 # Example Configurations for Different Scenarios
 # -----------------------------------------------------------------------------
 
-# Example 1: Use a different CUDA version
-# CUDA_VERSION=12.2.0
+# Example 1: Use a different CUDA version (check Docker Hub for available versions)
+# CUDA_VERSION=12.6.0
+# CUDNN_VERSION=9
 
 # Example 2: Change the application port
 # APP_PORT=8080
 # HOST_PORT=8080
 
-# Example 3: Match host user ID (useful for file permissions)
+# Example 3: Custom Streamlit configuration
+# STREAMLIT_SERVER_ADDRESS=127.0.0.1  # Only localhost (not recommended for Docker)
+# STREAMLIT_SERVER_HEADLESS=false     # Open browser automatically
+
+# Example 4: Match host user ID (useful for file permissions)
 # APP_UID=1001  # Replace with output of: id -u
 
-# Example 4: Use only specific GPUs
+# Example 5: Use only specific GPUs
 # CUDA_VISIBLE_DEVICES=0,1
 # GPU_COUNT=2
 
-# Example 5: Use Python 3.11 (ensure compatibility with dependencies first)
+# Example 6: Use Python 3.11 (ensure compatibility with dependencies first)
 # PYTHON_VERSION=3.11
 
-# Example 6: Compile only for your specific GPU (faster build)
+# Example 7: Compile only for your specific GPU (faster build)
 # For RTX 3090 only: TORCH_CUDA_ARCH_LIST=8.6
 # For RTX 4090 only: TORCH_CUDA_ARCH_LIST=8.9
 # For multiple: TORCH_CUDA_ARCH_LIST=8.6 8.9
 
-# Example 7: Use custom cache directories
+# Example 8: Use custom cache directories
 # CACHE_DIR=/data/.cache
 # HF_CACHE_DIR=/data/.cache/huggingface
 # REMBG_CACHE_DIR=/data/.u2net
 
-# Example 8: Use custom volume names (useful for multiple instances)
+# Example 9: Use custom volume names (useful for multiple instances)
 # CACHE_VOLUME=trellis-dev-cache
 # HF_CACHE_VOLUME=huggingface-dev-cache
 # REMBG_CACHE_VOLUME=rembg-dev-cache
 
-# Example 9: Store outputs in a different directory
+# Example 10: Store outputs in a different directory
 # OUTPUTS_HOST_DIR=/path/to/my/outputs
 
