--- a/docker.env.example
+++ b/docker.env.example
@@ -43,6 +43,13 @@ KAOLIN_INDEX_URL=https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu
 TORCH_CUDA_ARCH_LIST=7.0 7.5 8.0 8.6 8.9 9.0
 
 # -----------------------------------------------------------------------------
+# Package Installation Options
+# -----------------------------------------------------------------------------
+# Force building packages from source instead of using wheels
+# Useful for different CUDA versions or custom builds
+FORCE_BUILD_FLASH_ATTN=false
+
+# -----------------------------------------------------------------------------
 # Application Configuration
 # -----------------------------------------------------------------------------
 # Application user (non-root user inside container)
