--- a/docker.env.example
+++ b/docker.env.example
@@ -100,6 +100,11 @@ REMBG_CACHE_VOLUME=rembg-cache
 # Host directory for outputs (relative or absolute path)
 OUTPUTS_HOST_DIR=./outputs
 
+# Host cache directories (bind mounts for better compatibility)
+HOST_CACHE_DIR=~/.cache/trellis
+HOST_HF_CACHE_DIR=~/.cache/huggingface
+HOST_REMBG_CACHE_DIR=~/.cache/rembg
+
 # -----------------------------------------------------------------------------
 # Docker Image Configuration
 # -----------------------------------------------------------------------------
