--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
         HOST_HF_CACHE_DIR: ${HOST_HF_CACHE_DIR:-~/.cache/huggingface}
         HOST_REMBG_CACHE_DIR: ${HOST_REMBG_CACHE_DIR:-~/.cache/rembg}
         HF_CACHE_DIR: ${HF_CACHE_DIR:-/home/appuser/.cache/huggingface}
-        REMBG_CACHE_DIR: ${REMBG_CACHE_DIR:-/home/appuser/.u2net}
+        REMBG_CACHE_DIR: ${REMBG_CACHE_DIR:-/app/rembg_cache}
         TRELLIS_OUTPUT_DIR: ${TRELLIS_OUTPUT_DIR:-/tmp/Trellis-demo}
     image: trellis-box:latest
     container_name: trellis-box
@@ -37,7 +37,7 @@ services:
       # Persist Hugging Face cache
       - ${HOST_HF_CACHE_DIR:-~/.cache/huggingface}:${HF_CACHE_DIR:-/home/appuser/.cache/huggingface}
       # Persist rembg model cache (use named volume to avoid permission issues)
-      - rembg-cache:${REMBG_CACHE_DIR:-/home/appuser/.u2net}
+      - rembg-cache:${REMBG_CACHE_DIR:-/app/rembg_cache}
       # Persist generated outputs (bind mount to local directory)
       - ${OUTPUTS_HOST_DIR:-./outputs}:${TRELLIS_OUTPUT_DIR:-/tmp/Trellis-demo}
     environment:
