--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         HOST_REMBG_CACHE_DIR: ${HOST_REMBG_CACHE_DIR:-~/.cache/rembg}
         HF_CACHE_DIR: ${HF_CACHE_DIR:-/home/appuser/.cache/huggingface}
         REMBG_CACHE_DIR: ${REMBG_CACHE_DIR:-/app/rembg_cache}
-        TRELLIS_OUTPUT_DIR: ${TRELLIS_OUTPUT_DIR:-/tmp/Trellis-demo}
+        TRELLIS_OUTPUT_DIR: ${TRELLIS_OUTPUT_DIR:-/app/outputs}
     image: trellis-box:latest
     container_name: trellis-box
     ports:
@@ -38,8 +38,8 @@ services:
       - ${HOST_HF_CACHE_DIR:-~/.cache/huggingface}:${HF_CACHE_DIR:-/home/appuser/.cache/huggingface}
       # Persist rembg model cache (use named volume to avoid permission issues)
       - rembg-cache:${REMBG_CACHE_DIR:-/app/rembg_cache}
-      # Persist generated outputs (bind mount to local directory)
-      - ${OUTPUTS_HOST_DIR:-./outputs}:${TRELLIS_OUTPUT_DIR:-/tmp/Trellis-demo}
+      # Persist generated outputs (named volume for consistent permissions)
+      - trellis-outputs:${TRELLIS_OUTPUT_DIR:-/app/outputs}
     environment:
       # Streamlit configuration
       - STREAMLIT_SERVER_PORT=${APP_PORT:-8501}
@@ -70,5 +70,7 @@ volumes:
   huggingface-cache:
     driver: local
   rembg-cache:
+    driver: local
+  trellis-outputs:
     driver: local
 
